# kleos

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain  shell.nix
kernel/: Cargo.toml  notes.md
kernel/src/: apic.rs  color.rs  font.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  tracing.rs
src/: main.rs
